# ShapleyIQ

./: .gitignore  COMPATIBILITY_VERIFICATION_REPORT.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README_new.md  demo_compatibility_verification.py  demo_real_data.py  demo_real_trainticket.py  demo_simple_analysis.py  demo_trainticket_compatible.py  deploy_all_algos.sh  entrypoint.sh  info.toml  main.py  pyproject.toml  quick_start.py  requirements.txt  run.py  setup.py  test_consistency.py  test_consistency_final.py  test_full_migration.py  test_platform.py  test_real_data.py  todo.md  validate_setup.py
src/shapleyiq/: __init__.py  cli.py  example_usage.py
src/shapleyiq/algorithms/: __init__.py  base.py  microhecl.py  microrank.py  microrca.py  shapley_value_rca.py  ton.py
src/shapleyiq/data_structures/: __init__.py
src/shapleyiq/platform/: adapters.py  alarm_detector.py  algorithms.py  cli.py  data_loader.py  full_algorithms.py  interface.py  simple_cli.py
src/shapleyiq/preprocessing/: __init__.py
src/shapleyiq/utils/: __init__.py
tests/: conftest.py  test_algorithms.py  test_data_structures.py  test_preprocessing.py
